<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_top">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/img"/>

        <TextView
            android:id="@+id/profile_full_name"
            style="@style/TextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/full_name" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bounded_rounded"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_button_rounded">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_circle"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/back_button"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/back_to_home" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_title" />

                <TextView
                    android:id="@+id/profile_user_name"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/profile_email"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/profil_location"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>